[gd_scene load_steps=16 format=3 uid="uid://omgg45dpxftx"]

[ext_resource type="Script" path="res://src/main/gui/gui_main.gd" id="1_yjveq"]
[ext_resource type="PackedScene" uid="uid://cb6u1mub27xo" path="res://src/components/asset_download/asset_download.tscn" id="2_gfvot"]
[ext_resource type="Script" path="res://src/main/gui/auto_updates.gd" id="3_xje7q"]
[ext_resource type="PackedScene" uid="uid://csgrsfoydw3m4" path="res://src/components/title_bar/title_bar.tscn" id="4_gf6dh"]
[ext_resource type="PackedScene" uid="uid://qxd7fbvfbjs5" path="res://src/components/projects/projects.tscn" id="5_dexs5"]
[ext_resource type="PackedScene" uid="uid://bpi7ggvfe5uhq" path="res://src/components/editors/local/local_editors.tscn" id="6_tm278"]
[ext_resource type="PackedScene" uid="uid://dxnoecc3ruw3t" path="res://src/components/editors/remote/remote_editors.tscn" id="7_m50ss"]
[ext_resource type="PackedScene" uid="uid://pa8k1h8e2ib" path="res://src/components/godots_releases/godots_releases.tscn" id="8_aidwm"]
[ext_resource type="PackedScene" uid="uid://cnweym2t3je6y" path="res://src/components/downloads_container/downloads_container.tscn" id="9_drkdu"]
[ext_resource type="PackedScene" uid="uid://cdyq5l2atcuap" path="res://src/components/asset_lib_projects/asset_lib_projects.tscn" id="9_drvxo"]
[ext_resource type="Script" path="res://src/components/misc/news_button.gd" id="10_ciylo"]
[ext_resource type="Script" path="res://src/components/misc/notifications_button.gd" id="11_qd3hf"]
[ext_resource type="PackedScene" uid="uid://buwhvihmtjeff" path="res://src/components/tags/manage_tags.tscn" id="12_6d5cn"]
[ext_resource type="PackedScene" uid="uid://btxxnjmhy4bqw" path="res://src/components/command_viewer/command_viewer.tscn" id="13_mk5sf"]
[ext_resource type="PackedScene" uid="uid://b3aprmu6od0wa" path="res://src/components/settings/settings_window.tscn" id="14_3j6hr"]

[node name="Main" type="Control" node_paths=PackedStringArray("_remote_editors", "_local_editors", "_projects", "_asset_lib_projects", "_godots_releases", "_auto_updates")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjveq")
_remote_editors = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Remote Editors")
_local_editors = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Local Editors")
_projects = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Local Projects")
_asset_lib_projects = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Asset Library Projects")
_godots_releases = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Updates")
_auto_updates = NodePath("AutoUpdates")
_asset_download = ExtResource("2_gfvot")

[node name="AutoUpdates" type="Node" parent="." node_paths=PackedStringArray("_notification_button")]
script = ExtResource("3_xje7q")
_notification_button = NodePath("../GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/UpdatesButton")

[node name="GuiBase" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="GuiBase"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" parent="GuiBase/MainVBox" instance=ExtResource("4_gf6dh")]
layout_mode = 2

[node name="Content" type="Control" parent="GuiBase/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GuiBase/MainVBox/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="GuiBase/MainVBox/Content/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Local Projects" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("5_dexs5")]
layout_mode = 2

[node name="Asset Library Projects" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("9_drvxo")]
visible = false
layout_mode = 2

[node name="Local Editors" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("6_tm278")]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Remote Editors" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("7_m50ss")]
visible = false
layout_mode = 2

[node name="Updates" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("8_aidwm")]
visible = false
layout_mode = 2

[node name="DownloadsContainer" parent="GuiBase/MainVBox/Content/VBoxContainer" instance=ExtResource("9_drkdu")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="GuiBase/MainVBox/Content/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="NewsButton" type="LinkButton" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("10_ciylo")

[node name="Control" type="Control" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="UpdatesButton" type="Button" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon_alignment = 1
script = ExtResource("11_qd3hf")

[node name="VBoxContainer" type="VBoxContainer" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VersionButton" type="LinkButton" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1.0.dev"
uri = "https://github.com/MakovWait/godots"

[node name="SettingsHBoxContainer" type="HBoxContainer" parent="GuiBase/MainVBox/Content"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_bottom = 31.0
grow_horizontal = 0
alignment = 2

[node name="SettingsButton" type="Button" parent="GuiBase/MainVBox/Content/SettingsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "settings"
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ManageTags" parent="." instance=ExtResource("12_6d5cn")]
visible = false

[node name="CommandViewer" parent="." instance=ExtResource("13_mk5sf")]
unique_name_in_owner = true

[node name="Settings" parent="." instance=ExtResource("14_3j6hr")]
visible = false
